# gephi-ai

./: LICENSE  README.md
.claude-plugin/: marketplace.json
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: network-analyst.md
claude-plugin/commands/: analyze-network.md  centrality.md  community-detection.md  import-and-explore.md  visualize.md
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: check-gephi.sh
claude-plugin/skills/gephi/: SKILL.md
claude-plugin/skills/gephi/references/: layout-guide.md  statistics-guide.md  tool-reference.md
docs/superpowers/plans/: 2026-03-16-gephi-plugin-bug-fixes.md
gephi-mcp-plugin/: pom.xml
gephi-mcp-plugin/src/main/java/org/gephi/plugins/mcp/: Installer.java
gephi-mcp-plugin/src/main/java/org/gephi/plugins/mcp/api/: GephiAPIServer.java
gephi-mcp-plugin/src/main/java/org/gephi/plugins/mcp/service/: GephiControlService.java
mcp-server/: gephi_mcp.py  pyproject.toml
